--- a/Dev/Dev2.Activities.Designers/Designers2/Core/CustomToolDesignerRegions.xaml
+++ b/Dev/Dev2.Activities.Designers/Designers2/Core/CustomToolDesignerRegions.xaml
@@ -13,7 +13,7 @@
                     xmlns:common="clr-namespace:System.Data.Common;assembly=System.Data"
                     xmlns:to="clr-namespace:Dev2.TO;assembly=Dev2.Activities"
                     xmlns:customControls="clr-namespace:Dev2.CustomControls;assembly=Dev2.CustomControls"
-                    xmlns:fa="http://schemas.fontawesome.com/icons/fonts"
+                    xmlns:fa="http://schemas.fontawesome.com/icons/fontsSourceEditButton
                     xmlns:interfaceImplementors="clr-namespace:Dev2.Studio.InterfaceImplementors;assembly=Dev2.Intellisense"
                     xmlns:netDllEnhanced="clr-namespace:Dev2.Activities.Designers2.Net_Dll_Enhanced"
                     xmlns:actionRegion="clr-namespace:Dev2.Activities.Designers2.Core.ActionRegion"
@@ -52,7 +52,7 @@
                     <core:HelpSetter Text="{Binding SourceRegion.SourcesHelpText}" DataContext="{Binding}" />
                 </i:Interaction.Behaviors>
             </ComboBox>
-            <Button x:Name="SourceEditButton" 
+            <Button x:Name="SourceEditButton" IsEnabled="False"
                         Grid.Column="2"
                         Margin="{StaticResource ControlBorderRight}"
                         Content="..."
@@ -62,7 +62,7 @@
                     <core:HelpSetter Text="{Binding SourceRegion.EditSourceHelpText}" DataContext="{Binding}" />
                 </i:Interaction.Behaviors>
             </Button>
-            <Button x:Name="SourceNewButton" 
+            <Button x:Name="SourceNewButton" IsEnabled="False"
                         Grid.Column="3"
                         Content="{x:Static languages:Core.New}" 
                         Width="Auto"
