--- a/Dev/Dev2.Activities.Designers/Designers2/Core/CustomToolDesignerRegions.xaml
+++ b/Dev/Dev2.Activities.Designers/Designers2/Core/CustomToolDesignerRegions.xaml
@@ -13,7 +13,7 @@
                     xmlns:common="clr-namespace:System.Data.Common;assembly=System.Data"
                     xmlns:to="clr-namespace:Dev2.TO;assembly=Dev2.Activities"
                     xmlns:customControls="clr-namespace:Dev2.CustomControls;assembly=Dev2.CustomControls"
-                    xmlns:fa="http://schemas.fontawesome.com/icons/fontsSourceEditButton
+                    xmlns:fa="http://schemas.fontawesome.com/icons/fonts"
                     xmlns:interfaceImplementors="clr-namespace:Dev2.Studio.InterfaceImplementors;assembly=Dev2.Intellisense"
                     xmlns:netDllEnhanced="clr-namespace:Dev2.Activities.Designers2.Net_Dll_Enhanced"
                     xmlns:actionRegion="clr-namespace:Dev2.Activities.Designers2.Core.ActionRegion"
@@ -22,6 +22,8 @@
                     mc:Ignorable="d"
                     x:Class="CustomToolDesignerRegions"
                     d:DataContext="{d:DesignInstance core1:CustomToolWithRegionBase}">
+
+
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary>
