--- a/Dev/Dev2.Studio/Views/Workflow/WorkflowInputDataView.xaml
+++ b/Dev/Dev2.Studio/Views/Workflow/WorkflowInputDataView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Microsoft.Xaml.Behaviors;assembly=Microsoft.Xaml.Behaviors"                     
         xmlns:local="clr-namespace:Dev2.Studio.AppResources.Behaviors"
-        xmlns:j="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
+        xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
         xmlns:ui="clr-namespace:Dev2.UI;assembly=Dev2.Intellisense"
         xmlns:provider="clr-namespace:Dev2.Intellisense.Provider;assembly=Dev2.Intellisense"
         xmlns:interfaceImplementors="clr-namespace:Dev2.Studio.InterfaceImplementors;assembly=Dev2.Intellisense"
